# cosmos-contracts

./: .gitignore  Cargo.toml  README.md  build_release.sh  rustfmt.toml
.github/workflows/: basic.yml
contracts/multicall/: Cargo.toml  README.md
contracts/multicall/src/: call.rs  commands.rs  contract.rs  error.rs  lib.rs  msg.rs  queries.rs  state.rs  tests.rs
contracts/osmosis/: Cargo.toml  README.md
contracts/osmosis/src/: commands.rs  contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  state.rs
