[workspace]
members = ["packages/*", "contracts/*"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.1.2"
cosmwasm-std = { version = "1.2", features = ["stargate"] }
cosmwasm-storage = "1.1.2"
cw-storage-plus = "1.0.1"
cw2 = "1.0.0"
schemars = "0.8.11"
osmosis-std = "0.13.2"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-multi-test = "0.16.1"
# osmosis-testing = "0.13.2"
serde-json-wasm = "0.5.2"
serde-cw-value = "0.7.0"
bech32 = "0.9.1"
cw-utils = "1.0.0"
itertools = "0.10"
enum-repr = "0.2.6"
prost = { version = "0.11.2", default-features = false, features = ["prost-derive"] }