[package]
name = "multicall"
version = "1.2.0"
authors = ["0xsquid"]
edition = "2021"

exclude = [ "contract.wasm", "hash.txt" ]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
imported = []

[dependencies]
cosmwasm-schema =  { workspace = true }
cosmwasm-std =  { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
osmosis-std = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde-json-wasm = { workspace = true }
serde-cw-value = { workspace = true }
bech32 = { workspace = true }
cw-utils = { workspace = true }
itertools = { workspace = true }
enum-repr = { workspace = true }
prost = { workspace = true }

cw20 = "1.1.0"
ibc-tracking = { version = "1.2.0", path = "../../packages/ibc-tracking" }
shared = { version = "1.2.0", path = "../../packages/shared" }
