[package]
name = "osmosis"
version = "0.1.0"
authors = [""]
edition = "2021"

exclude = [ "contract.wasm", "hash.txt" ]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
imported = []

[dependencies]
cosmwasm-schema =  { workspace = true }
cosmwasm-std =  { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
osmosis-std = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde-json-wasm = { workspace = true }
serde-cw-value = { workspace = true }
bech32 = { workspace = true }
cw-utils = { workspace = true }
itertools = {workspace = true}

osmosis-router = { version = "0.1.0", path = "../../packages/osmosis-router" }

enum-repr = "0.2.6"
prost = {version = "0.11.2", default-features = false, features = ["prost-derive"]}
osmosis-std-derive = "0.13.2"

[dev-dependencies]
cw-multi-test = { workspace = true }
# osmosis-testing = { workspace = true }
